fix: horizontal scrollbars show up by default

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 #effects-layer {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   pointer-events: none;
 }
